Make the footer a flexbox to align the logos correctly!

--- a/css/style-cs18.css
+++ b/css/style-cs18.css
@@ -154,6 +154,11 @@ h1 {
     color:#FFF;
     text-align: center;
     height: 4.5vw;/*70px;*/
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
   }
 
   .footer-logo-square {
